--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -15,6 +15,12 @@
     {% block content %}
     {% include "navbar.html.twig" %}
     {% endblock %}
+
+{% block footer %}
+{%include "footer.html.twig" %}
+{% endblock %}
+
+
 </body>
 </html>
 
